Opera Library (#62)
* Deploy and undeploy done

* tests

* Refractor

* Bump opera to 0.6.4
