# src/opera/api/util/timestamp_util.py
@@ -6,8 +6,8 @@ def datetime_now_to_string():
 
 
 def datetime_to_str(timestamp: datetime.datetime):
-    return timestamp.strftime('%Y-%m-%dT%H:%M:%S.%f')
+    return timestamp.strftime('%Y-%m-%dT%H:%M:%S.%f%z')
 
 
 def str_to_datetime(time_str: str):
-    return datetime.datetime.strptime(time_str, '%Y-%m-%dT%H:%M:%S.%f')
+    return datetime.datetime.strptime(time_str, '%Y-%m-%dT%H:%M:%S.%f%z')
